UtahLiveDataTest/src/objects/Drawdown__c.object
<CustomObject>
    <fields>
        <fullName>AuthorizedFirstName__c</fullName>
        <description>This field is used in Advance or Reimbursement form.</description>
        <label>Authorized First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorizedLastName__c</fullName>
        <description>This field is used in Payment Request form.</description>
        <label>Authorized Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorizedMiddleName__c</fullName>
        <description>This field is used in Advance or Reimbursement form.</description>
        <label>Authorized Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorizedPrefix__c</fullName>
        <description>This field is used in Advance or Reimbursement form</description>
        <label>Authorized Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mr .</fullName>
                </value>
                <value>
                    <fullName>Mrs .</fullName>
                </value>
                <value>
                    <fullName>Miss</fullName>
                </value>
                <value>
                    <fullName>Ms .</fullName>
                </value>
                <value>
                    <fullName>Dr .</fullName>
                </value>
                <value>
                    <fullName>Rev .</fullName>
                </value>
                <value>
                    <fullName>Prof .</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AuthorizedSuffix__c</fullName>
        <description>This field is used in Payment Request form.</description>
        <label>Authorized Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jr .</fullName>
                </value>
                <value>
                    <fullName>Sr .</fullName>
                </value>
                <value>
                    <fullName>M. D.</fullName>
                </value>
                <value>
                    <fullName>Ph. D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AuthorizedTelephone__c</fullName>
        <description>This field is used in Payment Request form.</description>
        <label>Authorized Telephone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorizedTitle__c</fullName>
        <description>This field is used in Payment Request form.</description>
        <label>Authorized Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BasisOfRequest__c</fullName>
        <description>This field is used in Request for Advance or Reimbursement</description>
        <label>Basis Of Request</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractuals__c</fullName>
        <label>Contract Spend</label>
        <summarizedField>DrawdownDetail__c.AmountSpend__c</summarizedField>
        <summaryFilterItems>
            <field>DrawdownDetail__c.SpendPlan__c</field>
            <operation>equals</operation>
            <value>Contracts</value>
        </summaryFilterItems>
        <summaryForeignKey>DrawdownDetail__c.Drawdown__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DateRequestSubmitted__c</fullName>
        <description>This field is used in Advance or Reimbursement form.</description>
        <label>Date Request Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmployerIdentificationNumber__c</fullName>
        <description>This field is used in Advance or Reimbursement form.</description>
        <label>Employer Identification Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FederalAmountRemaining__c</fullName>
        <description>This field is used in Advance or Reimbursement form.</description>
        <formula>FederalCashOutLays__c  -  RemainingFederalCash__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federal Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FederalCashOutLays__c</fullName>
        <description>This field is used in Advance or Reimbursement form</description>
        <label>Federal Cash OutLays</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinancialAssistanceIdentificationNo__c</fullName>
        <description>This field is used in Advance or Reimbursement form.</description>
        <label>Financial Assistance Identification No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipLabel>Drawdowns</relationshipLabel>
        <relationshipName>Drawdowns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>InternalSpend__c</fullName>
        <label>Internal Spend</label>
        <summarizedField>DrawdownDetail__c.AmountSpend__c</summarizedField>
        <summaryFilterItems>
            <field>DrawdownDetail__c.SpendPlan__c</field>
            <operation>equals</operation>
            <value>Internal Spend</value>
        </summaryFilterItems>
        <summaryForeignKey>DrawdownDetail__c.Drawdown__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>InvoicePeriod__c</fullName>
        <formula>Text(StartDate__c) &amp;&apos;/&apos; &amp; Text(EndDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InvoicePeriod</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOU__c</fullName>
        <label>ISA Spend</label>
        <summarizedField>DrawdownDetail__c.AmountSpend__c</summarizedField>
        <summaryFilterItems>
            <field>DrawdownDetail__c.SpendPlan__c</field>
            <operation>equals</operation>
            <value>ISA</value>
        </summaryFilterItems>
        <summaryForeignKey>DrawdownDetail__c.Drawdown__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <displayFormat>DD-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PaidAmount__c</fullName>
        <label>PaidAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaidDate__c</fullName>
        <label>PaidDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PartialPaymentRequestNumber__c</fullName>
        <description>This field is used in Advance or Reimbursement form</description>
        <label>Partial Payment Request Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentReference__c</fullName>
        <label>PaymentReference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceiptsUploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ReceiptsUploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RemainingFederalCash__c</fullName>
        <label>Remaining Federal Cash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SignedBy__c</fullName>
        <label>SignedBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubAwardSpend__c</fullName>
        <label>Sub Award Spend</label>
        <summarizedField>DrawdownDetail__c.AmountSpend__c</summarizedField>
        <summaryFilterItems>
            <field>DrawdownDetail__c.SpendPlan__c</field>
            <operation>equals</operation>
            <value>Sub Awards</value>
        </summaryFilterItems>
        <summaryForeignKey>DrawdownDetail__c.Drawdown__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TermsAgreement__c</fullName>
        <label>TermsAgreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I Agree</fullName>
                </value>
                <value>
                    <fullName>I Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>SubAwardSpend__c +  Contractuals__c  +  InternalSpend__c  +  MOU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TypeOfPayment2__c</fullName>
        <description>This field is used in Request for advance or Reimbursement</description>
        <label>Type Of Payment2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfPayment__c</fullName>
        <description>This field is used in Request for Advance or Reimbursement.</description>
        <label>Type Of Payment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VoucherNumber__c</fullName>
        <label>VoucherNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Drawdown</label>
    <nameField>
        <label>Drawdown Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drawdowns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>